--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,10 @@
     font-weight: 400;
     font-style: normal;
  }
+ .wrapper {
+    height: calc(100vh - 80px);
+    display: flex;
+ }
  a {
     text-decoration: none;
     color: white;
@@ -17,15 +21,18 @@
  li {
     list-style: none;
  }
+
  /* CONTAINER */
 .container {
     /* Debug */
     width: 100%;
-    background-color: aqua;
+/*     background-color: aqua; */
 }
 main {
-/*     height: calc(100% - 80px);  */   
+/*     height: calc(100vh - 80px);
+    width: calc(100vw - 200px);   */ 
     background-image: url(../img/sfondo.jpg);
+
 }
 .sfondo-header {
     height: 100px;
@@ -45,8 +52,6 @@ main {
 /*     background-color: blue;
  */}
 .box-nav {
-    /* Debug */
-    /* background-color: blue; */
     height: 70px;
 }
 .card {
@@ -58,34 +63,18 @@ main {
 }
 .img-card {
     width: 100%;
-    height: 100%;
+    height: 350px;
     border-radius: 15px;
 }
 .box-img {
     width: 100%;
-    height: 350px;
+    height: 100%;
 }
 .col-tipologia {
     border: 3px solid black;
     background-color: white;
     border-radius: 25px;
     margin-top: 20px;
-}
-
-/* SIDEBAR */
-.sidebar {
-    width: 200px;
-    background-color: black;
-    height: 100%;
-    color: white;
-}
-.card-sidebar {
-/*     width: 100%;
-    height: 200px; */
-}
-.img-card-sidebar {
-    width: 100%;
-    height: 100%;
 }
 
 /* FOOTER */
