--- a/css/tipologia.css
+++ b/css/tipologia.css
@@ -2,6 +2,7 @@
 .sidebar {
     width: 200px;
     background-color: black;
+    background: linear-gradient(to top, rgba(0, 0, 0, 0) -40%, rgb(0, 0, 0) 40%);
     height: 100%;
     color: white;
     overflow-y: auto;
@@ -10,7 +11,14 @@
     width: 100%;
     height: 120px;
 }
-
+@media screen and (max-width: 750px) {
+    .sidebar {
+        display: none;
+    }
+    .sfondo-dan {
+        width: 100%;
+    }
+}
 /* MAIN */
 main {
     height: calc(100vh - 80px);
@@ -23,12 +31,12 @@ main {
 }
 .img-manga {
     width: 100%;
-    height: 150px;
+    height: 160px;
     background-size: contain;
 }
 .img-manga2 {
     width: 100%;
-    height: 150px;
+    height: 160px;
     background-size: contain;
     display: none;
 }
@@ -38,4 +46,47 @@ main {
 .box-manga:hover .img-manga2 {
     display: block;
 }
-
+.box-manga, .lista-seinen {
+    box-shadow: 10px 10px 10px black;
+    display: flex;
+    flex-direction: column;
+    flex-grow: 0;
+}
+.box-manga:hover {
+    box-shadow: 10px 10px 5px gray;
+    background: linear-gradient(to top, rgb(255, 255, 255) 0%, rgb(54, 54, 54) 60%);
+}
+.info-manga {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    /* debug */
+/*     background-color: aliceblue; */
+    width: 100%;
+    height: 100%;
+}
+.img-table {
+    width: 200px;
+    height: 200px;
+}
+.info-table {
+    width: 600px;
+}
+.trama {
+    /* Debug */
+    background-color: chartreuse;
+    width: 100%;
+/*     height: 500px; */
+}
+.col-height {
+    height: 215px;
+}
+.img-flot-left {
+    float: left;
+}
+.img-flot-right {
+    float: right;
+}
+.ombra {
+    box-shadow: 10px 10px 10px black;
+}
