--- a/css/tipologia.css
+++ b/css/tipologia.css
@@ -3,7 +3,7 @@
     width: 200px;
     background-color: black;
     background: linear-gradient(to top, rgba(0, 0, 0, 0) -40%, rgb(0, 0, 0) 40%);
-    height: 100%;
+    height: 100vh;
     color: white;
     overflow-y: auto;
 }
@@ -11,7 +11,7 @@
     width: 100%;
     height: 120px;
 }
-@media screen and (max-width: 750px) {
+@media screen and (max-width: 650px) {
     .sidebar {
         display: none;
     }
@@ -56,6 +56,7 @@ main {
     box-shadow: 10px 10px 5px gray;
     background: linear-gradient(to top, rgb(255, 255, 255) 0%, rgb(54, 54, 54) 60%);
 }
+/* PAGINA DEL MANGA */
 .info-manga {
     display: flex;
     justify-content: center;
@@ -72,12 +73,6 @@ main {
 .info-table {
     width: 600px;
 }
-.trama {
-    /* Debug */
-    background-color: chartreuse;
-    width: 100%;
-/*     height: 500px; */
-}
 .col-height {
     height: 215px;
 }
@@ -89,4 +84,12 @@ main {
 }
 .ombra {
     box-shadow: 10px 10px 10px black;
+}
+.grid-p {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+    gap: 20px;
+}
+.item-p {
+    width: 180px;
 }
